--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "dependencies": {
     "@types/node": "^18.11.18",
     "nodegit": "^0.28.0-alpha.20",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
+  },
+  "devDependencies": {
+    "@types/nodegit": "^0.28.2"
   }
 }
