--- a/package.json
+++ b/package.json
@@ -17,6 +17,23 @@
     "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "@types/nodegit": "^0.28.2"
+    "@types/nodegit": "^0.28.2",
+    "@fontsource/inter": "4.5.14",
+    "@fontsource/montserrat": "4.5.13",
+    "@next/eslint-plugin-next": "13.0.6",
+    "@storybook/addon-a11y": "6.5.14",
+    "@storybook/addon-actions": "6.5.14",
+    "@storybook/addon-docs": "6.5.14",
+    "@storybook/addon-essentials": "6.5.14",
+    "@storybook/addon-interactions": "6.5.14",
+    "@storybook/addon-links": "6.5.14",
+    "@storybook/addon-storysource": "6.5.14",
+    "@storybook/builder-vite": "0.2.5",
+    "@storybook/react": "6.5.14",
+    "@storybook/testing-library": "0.0.13",
+    "@storybook/testing-react": "1.3.0",
+    "@swc-node/jest": "1.5.5",
+    "@swc/core": "1.3.24",
+    "@swc/jest": "0.2.24",
   }
 }
