--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "typescript": "^4.9.4"
   },
   "devDependencies": {
+    "prettier": "^2.8.3",
+    "@types/node": "18.11.18",
     "@types/nodegit": "^0.28.2"
   }
 }
