--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "dependencies": {
     "@types/node": "^18.11.18",
     "nodegit": "^0.28.0-alpha.20",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "depe": "asdfds",
+    "ts-node": "sdfdfs"
   },
   "devDependencies": {
     "prettier": "^2.8.3",
-    "@types/node": "18.11.18",
-    "@types/nodegit": "^0.28.2"
+    "@types/nodegit": "^0.28.2",
+    "dependency-add": "dafjlds"
   }
 }
